--- a/GridLock/GridLock.csproj
+++ b/GridLock/GridLock.csproj
@@ -9,7 +9,7 @@
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>LaserGame</RootNamespace>
-    <AssemblyName>LaserGame</AssemblyName>
+    <AssemblyName>GridLock</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -85,6 +85,7 @@
     <Compile Include="SettingsDlg.Designer.cs">
       <DependentUpon>SettingsDlg.cs</DependentUpon>
     </Compile>
+    <Compile Include="ThreadHelper.cs" />
     <Compile Include="WaitDlg.cs">
       <SubType>Form</SubType>
     </Compile>
